# phonikud-orpheus-3b

./: .gitignore  pyproject.toml
src/: infer.py  prepare_data.py  train.py
